# tpanar

./: .gitignore  Makefile.am  README.md  configure.ac  r.s
src/: Makefile.am  main.cpp
src/analysis/: fft_analyzer.cpp  fft_analyzer.h
src/audio/: adsr.h  audio_backend.h  jack_backend.cpp  jack_backend.h  null_backend.h  oss_backend.cpp  oss_backend.h  resampler.cpp  resampler.h  sample_buffer.cpp  sample_buffer.h  sample_data.h  sample_voice.cpp  sample_voice.h  timestretch.cpp  timestretch.h  voice.h
src/core/: audio_thread_pool.h  command.h  config_manager.cpp  config_manager.h  engine.cpp  engine.h  engine_command.h  engine_save.cpp  key_bindings.cpp  key_bindings.h  masterbus.cpp  masterbus.h  metronome.cpp  metronome.h  theme_types.h  transport.cpp  transport.h  undo_stack.cpp  undo_stack.h
src/dsp/: cabinet.h  chorus.h  compressor.h  delay.h  distortion.h  dsp.h  dsp_chain.cpp  dsp_chain.h  echo.h  exciter.h  flanger.h  gain.h  gate.h  graphical_eq.h  limiter.h  mastering_filter.h  mastering_styles.h  phaser.h  reference_analyzer.cpp  reference_analyzer.h  reference_matcher.cpp  reference_matcher.h  reverb.h  ring_modulator.h  stereo_expander.h  vocoder.h
src/edit/: cmd_clear_block.h  cmd_edit_block.h  cmd_paste_block.h  cmd_set_note.h  cmd_track_copy.cpp  cmd_track_copy.h  cmd_track_cut.cpp  cmd_track_cut.h  cmd_track_insert_silence.cpp  cmd_track_insert_silence.h  cmd_track_paste.cpp  cmd_track_paste.h  cmd_track_silence.cpp  cmd_track_silence.h  edit_command.h  undo_stack.h
src/gui/: theme.cpp  theme.h  wx_analog_vu_meter.cpp  wx_analog_vu_meter.h  wx_detached_frame.cpp  wx_detached_frame.h  wx_help_panel.cpp  wx_help_panel.h  wx_instrument_panel.cpp  wx_instrument_panel.h  wx_main_window.cpp  wx_main_window.h  wx_mixer_panel.cpp  wx_mixer_panel.h  wx_project_panel.cpp  wx_project_panel.h  wx_settings_panel.cpp  wx_settings_panel.h  wx_spectral_view.cpp  wx_spectral_view.h  wx_tracker_panel.cpp  wx_tracker_panel.h  wx_tracker_view.cpp  wx_tracker_view.h  wx_tracks_panel.cpp  wx_tracks_panel.h  wx_transportbar.cpp  wx_transportbar.h  wx_vu_meter.cpp  wx_vu_meter.h  wx_waveform_view.cpp  wx_waveform_view.h
src/gui/model/: mixer_model.cpp  mixer_model.h
src/instrument/: dssi_instrument.cpp  dssi_instrument.h  instrument.cpp  instrument.h  instrument_rack.cpp  instrument_rack.h  lv2_instrument.cpp  lv2_instrument.h  midi_instrument.cpp  midi_instrument.h  sample_instrument.cpp  sample_instrument.h  sfz_instrument.cpp  sfz_instrument.h  soundfont_instrument.cpp  soundfont_instrument.h  voice_instrument.cpp  voice_instrument.h  voice_synthesis_worker.cpp  voice_synthesis_worker.h
src/io/: audio_file.cpp  audio_file.h  midi_export.cpp  midi_export.h  project_archive.cpp  project_archive.h  song_serializer.cpp  song_serializer.h
src/midi/: midi_input.cpp  midi_input.h  midi_queue.h
src/mixer/: mixer_bus.cpp  mixer_bus.h  track.cpp  track.h  track_clipboard.cpp  track_clipboard.h
src/sequencer/: automation.cpp  automation.h  note.h  pattern.cpp  pattern.h  sequencer.cpp  sequencer.h  timing.cpp  timing.h
src/util/: linear_smoother.h  ringbuffer.h
